# ndk_asset_manager_example

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: plugin.cpp
android/src/main/kotlin/com/example/ndk_asset_manager_example/: NdkAssetManagerExamplePlugin.kt
assets/: example.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ndk_asset_manager_example_example/: MainActivity.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: ndk_asset_manager_example.podspec
ios/Classes/: NdkAssetManagerExamplePlugin.h  NdkAssetManagerExamplePlugin.m  SwiftNdkAssetManagerExamplePlugin.swift
lib/: native_bridge.dart  ndk_asset_manager_example.dart
test/: ndk_asset_manager_example_test.dart
